# Wrotten_Pi

./: LICENSE  README.md
Wrotten_Pi/: Cargo.toml  boot.elf  boot.s  build.rs  final.img  kernel7.img  linker.ld  target_rasp.json
Wrotten_Pi/.cargo/: config.toml
Wrotten_Pi/src/: main.rs
